--- a/procfs-inspector/build.gradle
+++ b/procfs-inspector/build.gradle
@@ -1,20 +1,17 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.android.library'
 }
 
 android {
-    namespace 'com.example.carservice'
+    namespace 'com.android'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.carservice"
         minSdk 28
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -27,40 +24,29 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
     }
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
             Set<File> fileSet = options.bootstrapClasspath.getFiles()
             List<File> newFileList = new ArrayList<>();
             newFileList.add(new File('../libs/framework.jar'))
-            newFileList.add(new File('../libs/framework-wifi.jar'))
             newFileList.addAll(fileSet)
             options.bootstrapClasspath = files(newFileList.toArray())
         }
     }
-
+    sourceSets {
+        main {
+            aidl.srcDirs = ['src/main/java']
+        }
+    }
 }
 
 dependencies {
     compileOnly files("${rootProject.projectDir}/libs/framework.jar")
-    compileOnly files("${rootProject.projectDir}/libs/framework-wifi.jar")
-    compileOnly files("${rootProject.projectDir}/libs/services.jar")
     compileOnly files("${rootProject.projectDir}/libs/core-libart.jar")
 
     implementation project(':car-builtin-lib')
-    implementation project(':vehicle-libs')
-    implementation project(':car-lib')
-    implementation project(':procfs-inspector')
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.annotation:annotation:1.6.0'
-
-    testImplementation 'junit:junit:4.13.2'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
