--- a/vehicle-libs/build.gradle
+++ b/vehicle-libs/build.gradle
@@ -33,6 +33,11 @@ android {
             options.bootstrapClasspath = files(newFileList.toArray())
         }
     }
+    sourceSets {
+        main {
+            aidl.srcDirs = ['src/main/java']
+        }
+    }
 
 }
 
