--- a/car-lib/build.gradle
+++ b/car-lib/build.gradle
@@ -1,6 +1,35 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.protobuf'
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.7.1"
+    }
+
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:1.20.0"
+        }
+        javalite {
+            artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0"
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove javanone
+            }
+            task.plugins {
+                grpc {
+                    option("lite")
+                }
+                javalite { }
+            }
+        }
+    }
 }
 
 android {
@@ -42,6 +71,9 @@ android {
     sourceSets {
         main {
             aidl.srcDirs = ['src/main/java']
+            proto {
+                srcDir 'src/main/java'
+            }
         }
     }
 }
@@ -54,4 +86,6 @@ dependencies {
 
     implementation project(':vehicle-libs')
     implementation project(':car-builtin-lib')
+
+    api 'com.google.protobuf:protobuf-lite:3.0.1'
 }
