--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
             Set<File> fileSet = options.bootstrapClasspath.getFiles()
             List<File> newFileList = new ArrayList<>();
             newFileList.add(new File('../libs/framework.jar'))
+            newFileList.add(new File('../libs/framework-bluetooth.jar'))
             newFileList.add(new File('../libs/framework-wifi.jar'))
+            newFileList.add(new File('../libs/framework-connectivity-t.jar'))
             newFileList.addAll(fileSet)
             options.bootstrapClasspath = files(newFileList.toArray())
         }
@@ -46,10 +48,13 @@ android {
 dependencies {
     compileOnly files("${rootProject.projectDir}/libs/framework.jar")
     compileOnly files("${rootProject.projectDir}/libs/framework-wifi.jar")
-    compileOnly files("${rootProject.projectDir}/libs/services.jar")
+    compileOnly files("${rootProject.projectDir}/libs/framework-statsd.jar")
+    compileOnly files("${rootProject.projectDir}/libs/framework-connectivity-t.jar")
     compileOnly files("${rootProject.projectDir}/libs/core-libart.jar")
     compileOnly files("${rootProject.projectDir}/libs/android.hardware.automotive.audiocontrol-V2-java.jar")
     compileOnly files("${rootProject.projectDir}/libs/android.automotive.watchdog.internal-V2-java.jar")
+    compileOnly files("${rootProject.projectDir}/libs/android.hardware.automotive.occupant_awareness-V1-java.jar")
+    compileOnly files("${rootProject.projectDir}/libs/android.automotive.telemetry.internal-V2-java.jar")
     compileOnly files("${rootProject.projectDir}/libs/CarServiceUpdatable.jar")
 
     implementation project(':car-builtin-lib')
