--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (C) 2015 The Android Open Source Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
     package="com.android.car.updatable"
-    coreApp="true"
-    android:sharedUserId="android.uid.system"
-    android:sharedUserMaxSdkVersion="32">
+    coreApp="true">
+
+    <uses-sdk android:minSdkVersion="33"/>
 
     <!-- NOTE: when you're adding a new permission, you should edit
      cts/tests/tests/permission2/res/raw/automotive_android_manifest.xml accordingly and run
@@ -932,15 +948,8 @@
         android:directBootAware="true"
         android:allowBackup="false">
 
-        <service
-            android:name="com.android.car.CarServiceImpl"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.car.ICar" />
-            </intent-filter>
-        </service>
-        <service
-            android:name="com.android.car.PerUserCarServiceImpl"
-            android:exported="true" />
+        <!-- Do not add any new components here. Everything should be proxied through builtin
+             carservice -->
+
     </application>
 </manifest>
