--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# IntelliJ
+*.iml
+.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
